Add event featured option
